--- a/README
+++ b/README
@@ -1,4 +1,3 @@
-```
 # Dokkoo
                  .-'''-.                                .-'''-.        .-'''-.     
 _______         '   _    \                             '   _    \     '   _    \   
@@ -15,5 +14,4 @@ _______         '   _    \                             '   _    \     '   _    \
                            '------'  '---''------'  '---'                          
 Dokkoo is a Mokk (Macro Output Key Kit) implementation written in Rust.
 
-LICENSE: GPL-3.0-only
-```
+LICENSE: AGPL-3.0-or-later
