Do not render '.mokkf' files if they're in '/snippets' or '/layouts' Also:   - abandoned plans to incorporate Sass into the Mokk standard   - abandoned CLI plan to copy non-Mokk files in Mokk (one can do that themselves easily)   - considering new ways to publish Dokkoo   - deciding to not make first release '1.0.0,' rather '0.1.0'

--- a/src/TODO
+++ b/src/TODO
@@ -6,11 +6,8 @@ Chores:
 
 WIP:
 * Fully implement collections
-* Implement Sass preprocessor language
-* Do not render '.mokkf' files if they're in '/snippets' or '/layouts'
-* Copy files in Mokk that do not end in '.mokkf'
 
-1.0:
+First release:
 * Iterate on branding
 * Publish Dokkoo
     * Windows
@@ -18,12 +15,18 @@ WIP:
         * Chocolatey (possibly)
         * Scoop (possibly)
     * macOS
+        * Binary
         * Homebrew (possibly)
+        * Fink (possibly)
+        * MacPorts (possibly)
     * Linux-based operating systems
         * Binary
         * Debian package
-        * RPM package
+        * RPM package (possibly)
         * Snapcraft
-        * Flatpak
-        * Arch User Repository package ('dokkoo-git')
-    * crates.io
+        * Flatpak (possibly)
+        * Arch User Repository packages ('dokkoo' & 'dokkoo-git')
+    * Cross-platform
+        * crates.io (both CLI and library)
+        * Nix (possibly)
+        * pkgsrc (possibly)
