16 November 2020 Planning * Introduced plans for 'collections' context (abandoning 'collection' context inspired by Pigmeat) 	* It appears the Mokk standard is going to be far more different (and simpler!) than I anticipated, having just finished maintenance of Pigmeat and believing I'd simply be rewriting it in Rust and publishing the format I'd built for it. A largely directory-agnostic structure, merely a root and some optional folders, with a global file, makes using the Mokk schema very user-friendly, particularly in how the learning curve is almost zero and the timesink is practically nonexistent! I hope I'm able to implement the plans I've just commited. 		* The possibilities of this structure are pretty cool! Initially, I expect Mokk to be used by the rather technologically-inclined as part of their workflows, as other standards-based technologies have been, such as Markdown, Git, or WordPress. 		* Later, I expect projects to incorporate this technology into themselves; Reddit used Markdown in comments, GitHub used Git in social collaboration, and CMS services use WordPress to publish media content. I'm picturing, as a rather simplistic example, something like David Merfield's "Blot," which could eventually become part of a Tumblr-like ecosystem of blogs (decentralized, of course—or not! Perhaps it could be like micro.blog instead, marketed more like a [macroer/less-micro]blog Twitter … regardless of what it looks like, I'm calling it 'Oku;' I've had thoughts on this for quite a while now)

--- a/src/TODO
+++ b/src/TODO
@@ -6,27 +6,36 @@ Chores:
 
 WIP:
 * Fully implement collections
+    i.      As compiling, append to HashMap<collection: String, page: Page>
+    ii.     Incorporate into contexts as 'collections' context
+    iii.    Compile files at root last
 
-First release:
-* Iterate on branding
+Distribution plans:
+* Iterate on branding prior to major releases
 * Publish Dokkoo
-    * Windows
-        * Binary
-        * Chocolatey (possibly)
-        * Scoop (possibly)
-    * macOS
-        * Binary
-        * Homebrew (possibly)
-        * Fink (possibly)
-        * MacPorts (possibly)
-    * Linux-based operating systems
+    * Linux-based operating systems (primary CLI release target)
         * Binary
         * Debian package
-        * RPM package (possibly)
+        * RPM package
+        * COPR (planned)
+        * Gentoo (planned)
         * Snapcraft
-        * Flatpak (possibly)
+        * Flatpak (planned)
         * Arch User Repository packages ('dokkoo' & 'dokkoo-git')
-    * Cross-platform
-        * crates.io (both CLI and library)
-        * Nix (possibly)
-        * pkgsrc (possibly)
+    * Rust Crate (primary library release target)
+        * crates.io
+    * Unix-like operating systems
+        * pkgsrc (planned; technically intended for NetBSD)
+        * Nix (planned)
+    * Opensource BSD-based operating systems
+        * FreeBSD Ports (planned)
+        * OpenBSD Ports (planned)
+    * macOS & PureDarwin
+        * Binary
+        * Homebrew (planned; technically available for Linux as well)
+        * Fink (planned; technically available for Linux as well)
+        * MacPorts (planned)
+    * Windows
+        * Binary
+        * Chocolatey (planned)
+        * Scoop (planned)
